--- a/CS/정보처리기사/소프트웨어 설계 1.md
+++ b/CS/정보처리기사/소프트웨어 설계 1.md
@@ -580,7 +580,7 @@
 
 ---
 
-### 07. UML
+### 7. UML
 
 - 개념 모델링
   - 요구사항을 이해하기 쉽도록 실 세계의 상황을 단순화해 개념적으로 표현한 것이 모델, 표현된 모델을 생성해 나가는 과정을 개념 모델링이라고 함
@@ -770,6 +770,282 @@
     | Use Case 식별   | 액터가 요구하는 서비스와 정보 식별<br />액터가 시스템과 상호작용하는 행위 식별 |
     | 관계 정의       | 액터와 액터 그리고 액터와 유스케이스의 관계분석을 정의<br />유스케이스와 유스케이스 간의 관계 분석을 정의 |
     | Use Case 구조화 | 두 개의 상위 유스케이스에 존재하는 공통 서비스 추출<br />추출된 서비스로 유스케이스 정의<br />추출된 서비스를 사용하는 유스케이스와의 관계를 정의<br />조건에 따른 서비스 수행 부분 분석해 구조화 |
+
+---
+
+### 8. UI 환경 분석
+
+- 소프트웨어 아키텍처(Software Architecture)
+  - 개발 대상 시스템의 전반적인 구조를 체계적으로 설계
+  - 다수의 이해관계자가 참여하는 복잡한 개발에서 상호이해, 타협, 의사소통을 체계적으로 접근하기 위함
+  - SW를 구성하는 컴포넌트들의 상호작용 및 관계, 각각의 특성을 기반으로 컴포넌트들이 상호유기적으로 결합하는 SW의 여러 원칙 집합
+- 소프트웨어 아키텍처 품질 요구사항
+  - SW의 기능, 성능, 만족도 등의 요구사항이 얼마나 충족하는가를 나타내는 SW 특성의 핵심 집합
+  - 사용자의 요구사항을 얼마나 충족시키느냐에 따라 확립
+- ISO/IEC 9126 모델
+  - SW 품질 특성과 평가를 위한 국제 표준
+  - 내 외부 품질 : 기능성, 신뢰성, 사용성, 효율성, 유지보수성, 이식성
+  - 사용 품질 : 효과성, 생산성, 안정성, 만족도
+  - 외부지표(External Metrics) : 실행가능한 SW, 시스템을 시험, 운영 또는 관찰을 통해 시스템을 구성하는 일부분으로부터 추출된 SW 제품 측정에 사용, 사용자, 평가자, 시험자 및 개발자에게 시험 수행이나 운영 중에 SW 제품에 대한 품질을 평가하는 항목
+  - 내부지표(Internal Metrics) : 설계, 코딩 중에 실행할 수 없는 SW 제품(명세서, 원시코드 등)에 대해 적용하고 설계상 요구되는 외부 품질을 성취하기 위해 ISO 9126-3에 규정. 사용자, 평가자, 시험자 및 개발자가 SW 제품의 품질 평가에 도움
+  - ![image](https://user-images.githubusercontent.com/107028310/210566478-f26911d6-f4a4-4384-8895-888eda00e200.png)
+- ISO/IEC 25010
+  - ISO/IEC 9126에서 개정되어 특성 기준이 6개에서 8개로 증가
+  - 기존 : 기능성, 신뢰성, 사용성, 효율성, 유지보수성, 이식성
+  - 변경 : 기능 적합성, 실행 효율성, 호환성, 사용성, 신뢰성, 보안성, 유지보수성, 이식성, 부특성 일부 가 증가
+
+---
+
+- 사용자 경향 분석
+
+  - 기존/현존 UI 경향을 숙지하고 현재 UI 단점을 작성
+  - 사용자 요구사항 파악 및 쉽게 이해 가능한 기능 위주로 기술영역 정의
+
+- 기능 및 설계 분석
+
+  - 기능 조작성 분석 : 사용자 편의를 위한 조작에 관한 분석 확인 (예 : 스크롤바 지원 여부, 마우스 조작 동선 확인)
+  - 오류 방지 분석 : 조작 시 오류에 대해 예상 가능한지 확인 (예 : 의도치 않는 페이지 이동, 기능 버튼의 명확한 구분 확인, 기능 버튼 이름 일치 확인)
+  - 최소한의 조작으로 업무 처리 가능한 형태 분석 : 작업 흐름에 가장 적합한 레이아웃인지 확인 (예 : 기능 특성에 맞는 UI 및 조작 단계, 동선 최소화 확인)
+  - UI의 정보 전달력 확인 : 중요 정보인지, 쉽게 전달 가능한지, 정보 제공의 간결성, 명화것ㅇ을 확인하고 정보 제공 방식의 일관성, 사용자 이해성 확인, 상호 연관성 높은 정보인지 확인 (예 : 오류 발생 시 해결 방법  접근 용이성 확인)
+
+- 요구사항 요소
+
+  - | 구분              | 설명                                                         |
+    | ----------------- | ------------------------------------------------------------ |
+    | 데이터 요구       | 사용자 요구 모델과 객체들의 핵심 특성에 기반해 데이터 객체 정리<br />인터페이스에 영향을 줄 수 있으니 초기에 확인<br />(예 : Email 메시지 속성 : 제목, 송신자, 송신일, 참조인, 답변 등) |
+    | 기능 요구         | 동사형으로 사용자의 목적 달성을 위한 기능 설명<br />기능 요구 목록으로 최대한 철저하게 정리<br />(예 : 사용자는 메일을 작성, 수신, 참조하여 발송 가능) |
+    | 제품, 서비스 품질 | 감성 품질과 데이터/기능 요구 외 제품 품질, 서비스 품질을 고려<br />시스템 처리 능력 등 정량화 가능한 요구사항 확인 |
+    | 제약 사항         | 비용, 데드라인, 시스템 준수에 필요한 규제 등 사전에 제약 사항의 변경 여부 확인 |
+
+- 정황 시나리오 작성
+
+  - 개발하는 서비스의 초기 모양을 상상하는 단계
+
+  - 사용자 관점에서 작성하며 요구사항 정의에서 가장 기초적인 시나리오 의미
+
+  - 높은 수준과 낙관적인 상황에서 이상적 시스템 동작에 초점
+
+  - 육하원칙을 따르고 주로 사용자가 사용하는 기능 기반에서 작성
+
+  - 간단명료하고 정확하게 전달하고 같은 동작 기능은 하나의 시나리오에 통합
+
+  - 외부 전문가, 경험자에게 검토 의뢰
+
+  - | 정황 시나리오                                                | 요구사항                                                     |
+    | ------------------------------------------------------------ | ------------------------------------------------------------ |
+    | 사원은 출근해 시스템에 로그인하고 오늘 업무 확인<br />어제 요청한 결재가 승인 되었는지 확인 | 로그인하면 맨 위 화면에 오늘 업무가 표시되어야 함<br />결재 요청 내역에 결재 승인 여부가 확인 될 수 있도록 승인 내역은 다른색 이용 |
+
+---
+
+### 9. UI 표준 및 지침
+
+- UI(User Interface)
+  - 인간, 디지털 기기, SW 사이에서 의사소통 할 수 있도록 만들어진 매개체
+  - 인간과 컴퓨터의 상호작용(HCI)에 필요한 화상, 문자, 소리, 수단(장치)을 의미
+- UI 분야
+  - 표현에 관한 분야 : 전체적인 구성과 콘텐츠의 상세 표현을 위한 분야
+  - 정보 제공의 전달 분야 : 물리적 제어를 통한 정보 제공과 전달을 위한 분야
+  - 기능 분야 : 기능적으로 사용자가 쉽고 간편하게 사용하도록 하는 분야
+- UI의 특징
+  - 실사용자의 만족도에 직접 영향
+  - 적절한 UI 구성으로 편리성, 가독성, 동선의 축약 등으로 작업시간을 줄일 수 있고 업무 효율 증진 가능
+  - 실사용자가 수행해야 할 기능을 구체적으로 제시
+  - UI 설계 전 SW 아키텍처를 우선 숙지하고 있어야 함
+- UI 개발 시스템이 가져야 할 기능
+  - 사용자 입력의 검증
+  - 에러 처리와 에러 메시지 처리
+  - 도움과 프롬프트[^6] (Prompt) 제공
+
+[^6]: 프롬프트(입력창) : 사용자의 명령을 받아들일 준비가 되었음을 모니터에 나타내는 표시(커서)
+
+---
+
+- UI 설계 원칙
+
+  - 직관성(Intuitiveness) : 누구나 쉽게 이해하고 사용할 수 있도록 해야 함
+  - 유효성(Efficiency) : 사용자의 목적을 정확히 달성할 수 있도록 유용하고 효과적이어야 함
+  - 학습성(Learnability) : 사용자가 쉽게 배우고 익힐 수 있어야 함
+  - 유연성 (Flexibility) : 사용자의 요구를 최대한 수용하면서 오류를 최소화해야 함
+
+- UI 설계의 필요성
+
+  - 현 대상 결과의 오류 최소화와 적은 노력으로 구현하는 결과 얻기 가능
+  - 막연한 작업 기능에 대하여 구체적 방법 제시
+  - 사용자 편의성을 높여 작업 시간 단축, 업무 이해도 높이기
+  - 정보 제공자/공급자 사이의 원활하고 쉬운 매개 임무 수행
+
+- UI 설계 지침
+
+  - | 구분           | 설명                                                         |
+    | -------------- | ------------------------------------------------------------ |
+    | 사용자 중심    | 실사용자의 이해를 바탕으로 쉽게 이해, 사용할 수 있는 환경 제공 |
+    | 일관성         | 사용자가 기억하기 쉽고 빠른 습득이 가능하도록 버튼이나 조작법 제공 |
+    | 단순성         | 인지적 부담을 줄이도록 조작 방법을 가장 간단히 작동하도록 함 |
+    | 가시성         | 주요 기능은 메인 화면에 배치하여 조작이 용이토록 함          |
+    | 표준화         | 기능 구조의 선행 학습 이후 쉽게 이용할 수 있는 디자인 표준화 |
+    | 접근성         | 사용자의 직무, 성별, 나이 등 다양한 계층 수용                |
+    | 결과 예측 가능 | 작동 대상 기능만 보고 결과 예측이 가능해야 함                |
+    | 명확성         | 사용자 관점에서 개념적으로 쉽게 인지할 수 있어야 함          |
+    | 오류 발생 해결 | 오류 발생 시 사용자가 상황을 정확히 인지 가능해야 함         |
+
+---
+
+- UI 구현 표준
+  - 전체 시스템 개발 중 개발자간 협업을 통해 각기 개발한 화면간에 갖추어야 할 최소한의 UI 요소 및 배치 규칙 등 의미
+  - 공통 적용되어야 할 화면 구성, 화면 이동 등
+- UI 설계 시 오류 메시지나 경고에 관한 지침
+  - 메시지는 이해하기 쉬워야 한다
+  - 오류 회복을 위한 구체적 설명 제공해야 한다
+  - 오류로 인해 발생될 수 있는 부정적 내용을 적극적으로 사용자에게 알려야 한다
+- 한국형 웹 콘텐츠 접근성 지침 2.1 4가지 원칙
+  - 인식의 용이성 : 대체 텍스트, 멀티미디어 대체 수단, 명료성
+  - 운용의 용이성 : 입력 장치 접근성, 충분한 시간 제공, 광과민성 발작 예방, 쉬운 내비게이션
+  - 이해의 용이성 : 가독성, 예측 가능성, 콘텐츠의 논리성, 입력 도움
+  - 견고성 : 문법 준수, 웹 애플리케이션 접근성
+
+---
+
+- UX 사용자 경험
+  - 제품을 대상으로 직간접적으로 사용하며 느끼고 생각하게 되는 지각과 반응, 행동 등 모든 경험
+  - UI는 사람과 시스템 간의 상호작용, UX는 제품과 서비스, 회사와 상호작용을 통한 전체적인 느낌이나 경험
+  - UX에 영향을 주는 요소 : 성능, 시간
+- 모바일 사용자 UX 설계 시 고려사항(행정안전부 고시)
+  - 시스템을 사용하는 대상, 환경, 목적, 빈도 등을 고려
+  - 사용자가 직관적으로 서비스 이용 방법을 파악할 수 있도록 함
+  - 입력의 최소화, 자동 완성 기능 제공
+  - 사용자의 입력 실수를 수정할 수 있도록 되돌림 기능 제공
+  - 모바일 서비스 특성에 적합한 디자인 제공
+
+---
+
+### 10. UI 설계
+
+- UI 설계 단계
+  - 문제 정의 : 시스템의 목적과 해결해야 할 문제를 정의
+  - 사용자 모델 정의 : 사용자 특성을 결정, SW 작업 시 지식 정도에 따라 초보, 중급, 숙련자로 구분
+  - 작업 분석 : 사용자의 특징을 세분화하고 수행되어야 할 작업 정리
+  - 컴퓨터 오브젝트 및 기능 정의 : 작업 분석을 통해 어떤 사용자 인터페이스에 표현할지를 정의
+  - 사용자 인터페이스 정의 : 모니터, 마우스, 키보드, 터치스크린 등 물리적 입출력 장치등 상호작용 오브젝트를 통해 시스템 상태를 명확히 한다
+  - 디자인 평가 : 사용자 능력, 지식에 적합한지, 사용자가 사용하기 편리한지 등의 평가를 의미, 사용성 공학을 통해 사용성 평가 가능, 평가 방법으로 GOMS[^7], Heuristics[^8] 등이 있음
+
+[^7]:GOMS : 인간이 어떤 행위를 할지 예측하여 그 문제를 해결하는데 필요한 소요시간, 학습시간 등을 평가하기 위한 기법
+[^8]: Heruistics : 논리적 극거가 아닌 어림짐작을 통하여 답을 도출해 내는 방법
+
+- UI 상세 설계 단계
+
+  - | 단계                   | 설명                                                         |
+    | ---------------------- | ------------------------------------------------------------ |
+    | UI 메뉴 구조 설계      | 요구사항와 UI 지침에 따라 사용자 편의성 고려<br />요구사항 최종확인, UI 설계서 표지 및 개정 이력 작성<br />UI 구조 설계, 사용자 기반 메뉴 구조 설계 및 화면 설계 |
+    | 내/외부 화면과 폼 설계 | UI 요구사항과 UI 표준 지침에 따라 하위 시스템 단위 설계<br />실행 차 최소화 위해 UI 설계 원리 검토 > 행위 순서 검토> 행위 순서 대로 실행 검토<br />평가 차를 줄이기 위한 UI 설계 원리 검토 |
+    | UI 검토 수행           | UI 검토 보완을 위한 시뮬레이션 구성으로 컴퓨터 역할을 하기 위해 서류 조작원, 평가 진행자, 관찰자 필요<br />평가 결과를 토대로 설계 보완, 사용성에 대한 검토 및 검증 수행 |
+
+- UI 상세 설계 - 시나리오 작성 원칙
+
+  - UI 전체적 기능, 작동 방식을 개발자가 쉽게 이해할 수 있도록 구체적 작성
+  - 대표 화면 레이아웃 및 하위 기능을 정의하고 Tree 구조나 Flowchart 표기법을 이용
+  - 공통 적용이 가능한 UI 요소와 상호작용(Interaction)을 일반적인 규칙으로 정의
+  - 상호작용의 흐름 및 순서, 분기, 조건, 루프를 명시
+  - 예외 상황에 관한 사례를 정의하고 UI 시나리오 규칙 지정
+  - 기능별 상세 기능 시나리오를 정의, UI 시나리오 규칙 지정
+  - 시나리오 문서의 작성 요건 : 완전성, 일관성, 이해성, 가독성, 수정 용이성 ,추적 용이성
+
+- UI 흐름 설계서 구성
+
+  - UI 설계서 표지 : 프로젝트명, 시스템명을 포함해 작성
+  - UI 설계서 개정 이력 : 초안 작성을 포함, 초기 버전은 1.0으로 설정하고 완성 시 버전은 x.0으로 바꾸어 설정
+
+- UI 요구사항 정의
+
+  - 시스템 구조 : UI 프로토타입 재확인 후 UI 시스템 구조 설계
+  - 사이트맵 : UI 시스템 구조를 사이트맵 구조로 설계
+  - 프로세스 정의 : 사용자 관점에서의 요구 프로세스 순서 정리
+  - 화면 설계 : UI 프로세스/프로토타입을 고려해 페이지별로 화면 구성 및 설계
+
+- UI의 종류
+
+  - GUI(Graphical User Interface), OUI(Organic User Interface), NUI(Natural User Interface), CLI(Command Line Interface)
+
+---
+
+- UI 설계에 도움을 주는 도구들
+  - 와이어 프레임(Wire Frame) : UI 중심의 화면 레이아웃을 선으로 개략적으로 작성
+  - 목업(Mockup) : 시각적으로 구성 요소를 배치하는 것으로 일반적으로 실제 구현은 되지 않음
+  - 프로토타입(Prototype) : Interaction이 결합하여 실제 작동하는 모형
+  - 스토리보드(Storyboard) : 정책, 프로세스, 와이어 프레임, 설명이 모두 포함된 설계 문서
+- 와이어 프레임
+  - 기획 단계 초기에 작성, 구성할 화면의 개략적 레이아웃이나 UI요소 틀을 설계
+  - 개발 관계자 사이의 레이아웃 협의, 현재 진행 상황등을 공유할 때 사용
+  - 툴 : 핸드라이팅, 파워포인트, 키노트, Sketch, Balsamiq, Mockup, Adob Experience Design, 카카오 오븐
+- 목업(Mockup)
+  - 와이어 프레임보다 좀 더 실제 제품과 유사하게 만들어지는 실물 크기의 정적 모형으로 시각적으로만 구현
+  - 툴 : 카카오 오븐, Balsamqi, Mockup, Power Mockup
+- 스토리보드
+  - UI/UX 구현에 수반되는 사용자와 작업, 인터페이스 간 상호작용 시각화
+  - 개발자와 디자이너와의 의사소통 도구
+  - 완성해야 할 서비스와 예상되는 사용자 경험을 미리 보기 위한 방법론
+  - 작성 목적 : 설계에 필요한 조각을 모아 순서대로 놓고 배치해 보고 쌓아서 조립하는 과정으로 설계 단계에서 발생할 수 있는 문제 예측 대처 과정
+  - 작성 방법 : 상단/우측 > 제목, 작성자 기재, 좌측 > UI화면, 우측 > Description
+  - 작성 단계 : 메뉴 구성도 만들기 > 스타일 확정 > 설계
+
+---
+
+- UI Prototype
+
+  - 도출된 요구사항을 토대로 프로토타입(시제품)을 제작해 대상 시스템과 비교하며 개발 중 도출되는 추가 요구사항을 지속 재작성하는 과정
+  - 와이어프레임, 스토리보드에 Interaction을 적용
+  - 동적인 형태로 구현된 모형
+  - 툴 : HTML/CSS, Axure, Invision Studio, 카카오 오븐, Flinto, 네이버 Proto Now
+  - 작성 방법에 따른 분류 : 디지털 프로토타입, 페이퍼 프로토타입
+
+- 프로토타입의 장단점
+
+  - | 장점                                                         | 단점                                                         |
+    | ------------------------------------------------------------ | ------------------------------------------------------------ |
+    | 사용자 설득과 이해가 쉬움<br />개발시간 감소<br />오류 사전 발견 가능 | 수정이 많아질 시 작업시간 증가 가능<br />필요 이상으로 자원 소모<br />정확한 문서 작업이 생략될 수 있음 |
+
+- 프로토타입 작성 도구 및 방법
+
+  - | 구분    | 방법                                                         | 비고         |
+    | ------- | ------------------------------------------------------------ | ------------ |
+    | Analog  | 포스트잇, 칠판, 종이, 펜<br />소규모 개발, 제작 비용과 기간이 적을 때 이용<br />빠른 업무 협의가 필요한 경우 이용 | 손, 펜       |
+    |         | 비용이 저렴하며 즉시 변경 가능<br />회의 중 바로 작성 가능<br />상호 연관 관계가 복잡한 경우 표현 어려움<br />공유 힘듬 | -            |
+    | Digital | Power Point, Acrobat, Invision, Marvel, Adobe Xd, Flinto, Principle, Keynote, UX pin, HTML 등을 이용 | Digital Tool |
+    |         | 재사용성이 높지만 다룰 줄 아는 전문가 필요<br />목표 제품과 비슷하게 테스트 할 수 있으며 수정 수월 | -            |
+
+- UI Prototype 작성 시 고려사항
+
+  - 프로토타입 계획 작성, 범위 확인, 목표 확인, 기간 및 비용 확인, 산출물 확인, 유의사항 확인
+
+- UI Prototype 계획 시 고려사항
+
+  - 프로토타입 목표 확인, 환경 확인, 일정 확인, 범위 확인, 인언 확인, 아키텍쳐 검증 확인, 이슈 및 해결, 가이드 확정, 개발 생산성 확인, 결과 시연
+
+- UI 프로토타입 제작 단계
+
+  - 사용자 요구분석 > 프로토타입 작성 > 프로토타입 사용자 테스트 > 수정과 합의 단계
+
+---
+
+- 감성공학
+  - 인간의 소망으로 이미지나 감성을 구체적 제품 설계를 통해 실현해 내는 공학적 접근 방법으로 인간과 컴퓨터간에 상호작용, 즉 HCI 설계에 인간의 특성, 감성 등의 정량적 츠겆ㅇ과 평가를 통해 제품 환경 설계에 반영하는 기술
+  - 인간이 가지고 있는 소망의 이미지나 감성을 구체적 제품 설계로 실현해내는 인문 사회 과학, 공학, 의학 등 여러 분야의 학문이 융합된 기술
+  - 감각 및 생체계측, 센서, 인공지능 등의 생체 제어 기술 등을 통해 과학적 접근
+  - 최종 목표는 감성공학을 통해 인간이 쉽고 편리하고 쾌적하게 시스템과 어우러지는 것
+  - 1988년 시드니 국제 학회에서 감성공학으로 명명
+- 감성공학 접근 방법
+  - 1류(의미 미분법) : 인간의 감각, 감성을 표현하는 어휘(형용사)를 이용하고 제품에 대한 이미지를 조사분석, 디자인 요소에 연계하는 접근 방법
+  - 2류 : 1류의 기본틀은 공유, 감성 어휘 수집의 전 단계에서 평가자들의 생활 양식을 추가, 제품에 대한 기호 및 수요를 분석 대상의 소속 지역, 생활 양식, 의식 문화를 분석하는 접근 방법이며 1류와 함께 감성의 심리적 특성 강조
+  - 3류 : 1류의 감성 어휘 대신 평가자의 특정 시제품을 사용해 자신의 감각 척도로 감성을 표출하는 방법, 평가자의 생리적 감각 계측을 통해 객관성이 보완되고 정량화 된 값으로 산출, 대상 제품의 물리적인 특성에 대해 객관적인 지표와 연관 분석을 통해 제품 설계에 응용, 인간 감각 계측과 이의 활용이 강조된 접근 방법으로 감성의 생리적 특성 중요시
+- HCI(Human Computer Interaction or Interface)
+  - 인간과 컴퓨터의 상호작용을 연구해 어떻게 하면 좋은 제품을 만들 수 있는지 연구
+- HCI 목적
+  - 컴퓨터를 인간이 쉽게 사용할 수 있게 하여 상호작용(UX)를 개선
+  - 컴퓨터의 도구로서 잠재력을 극대화해 인간의 의지를 더 자유롭게 한다
+  - 인간의 창의력, 인간 사이의 의사소통과 협력을 증진하는 데 있다
+- 감성공학 요소 기술
+  - 기초 기술, 구현 기술, 응용 기술
+- 감성공학 관련기술
+  - 생체측정 기술, 인간 감성 특성 파악 기술, 감성 디자인 기술과 오감 센서 및 감성 처리 기술, 마이크로 기구 설계, 사용성 평가 기술 및 가상현실 기술
 
 ---
 
