--- a/CS/정보처리기사/소프트웨어 설계 1.md
+++ b/CS/정보처리기사/소프트웨어 설계 1.md
@@ -2,11 +2,11 @@
 
 [toc]
 
------
-
-## 1. 소프트웨어 설계
+## 1. 소프트웨어 설계 1
 
 ### 1. 소프트웨어 공학의 개념
+
+#### 01. 소프트웨어
 
 - 소프트웨어(Software)의 개념
 
@@ -27,11 +27,12 @@
   - 컴퓨터의 발달과정에서 SW의 개발속도가 HW의 개발속도를 따라가지 못해 사용자들의 요구사항을 감당할 수 없는 문제가 발생
   - 위기의 원인 : **하드웨어 비용을 초과하는 개발 비용의 증가** / **개발 기간의 지연** / **개발 인력 부족 및 인건비 상승** / **성능 및 신뢰성 부족** / **유지보수의 어려움에 따른 엄청난 비용**
 
------
+#### 02. 소프트웨어 공학 (Software Engineering)
 
 - 소프트웨어 공학 (Software Engineering)의 이해
   - 경제적으로 신뢰도 높은 SW를 만들기 위한 방법, 도구와 절차들의 체계
   - IEEE(전기전자학회(미국))는 SW의 개발, 운용, 유지보수 및 파기에 대한 체계적인 접근방법이라 정의
+
 - 소프트웨어 공학의 기본원칙
   - 현대적인 프로그래밍 기술을 적용 / 신뢰성 / 사용편리성 / 유지보수성 / 지속적 검증 시행 / 결과에 대한 명확한 기록 유지 / 사용자 원하는 대로 동작 / 최신프로그램 언어, 최신 알고리즘 사용 현황 확인 / SW 개발비용 최소화 / 개발 단계와 소스 코드등의 문서화를 통해 명확성을 유지
 - 공학적으로 좋은 SW의 조건
@@ -48,6 +49,8 @@
 -----
 
 ### 2. 재공학
+
+#### 01. 재공학
 
 - 소프트웨어 재공학(Software Reengineering)의 개념
   - SW Crisis를 개발 생산성이 아닌 유지 보수의 생산성으로 해결하려는 방법
@@ -66,12 +69,13 @@
 - 리팩토링(Refactoring)
   - SW를 보다 쉽게 이해할 수 있고, 적은 비용으로 수정할 수 있도록 겉으로 보이는 동작의 변화 없이 내부 구조를 변경
 
------
+#### 02. CASE (Computer Aided Software Engineering)
 
 - CASE (Computer Aided Software Engineering)
   - SW 개발과정에서 사용되는 요구분석, 설계, 구현, 검사 및 디버깅 과정을 컴퓨터와 전용 SW 도구를 사용해 자동화 하는 작업
   - 자료 흐름도 등 다이어그램을 쉽게 작성토록 해주는 SW도구
   - 작업과정 및 데이터 공유를 통해 작업자간의 커뮤니케이션 증대
+
 - CASE가 제공하는 기능
   - 개발을 신속하게, 오류 수정을 쉽게, SW 품질 향상
   - SW 생명주기의 전체 단계 연결, 자동화시켜주는 통합된 도구 제공 기술
@@ -89,7 +93,7 @@
   - 하위(Lower) CASE : 소스코드 작성, 테스트, 문서화 과정 지원
   - 통합(Integrate) CASE : SW 개발 주기 전체 과정 지원
 
------
+#### 03. 요구사항 분석을 위한 CASE 도구
 
 - 요구사항 분석을 위한 CASE
   - 요구사항 자동분석, 요구사항 분석명세서 기술토록 개발된 도구
@@ -101,7 +105,6 @@
   
   - SREM(Software Requirements Engineering Methodology) : TRW 사 개발, 실시간 처리 SW 시스템에서 요구사항을 명확히 기술하도록 할 목적으로 개발, RSL[^1]과 REVS[^2]를 사용
   
-    
 
 [^1]: 요소, 속성, 관계, 구조들을 기술하는 요구사항 기술언어
 [^2]: RSL로 기술된 요구사항들을 자동으로 분석해 요구사항 분석 명세서를 출력하는 분석기
@@ -109,6 +112,8 @@
 -----
 
 ### 3. 소프트웨어 개발 방법론
+
+#### 01. 소프트웨어 설계 방법론
 
 - 소프트웨어 생명주기(Software Life Cycle)
   - SW 제품의 개념 형성에서 시작해 운용/유지보수에 이르기까지 변화의 모든 과정
@@ -149,7 +154,7 @@
   - 테스트 작업을 단계별로 구분하므로 책임이 명확
   - ![image-20230101221315131](https://user-images.githubusercontent.com/107028310/210172786-6de657de-1280-4f69-a338-33c3ca0054bb.png)
 
----
+#### 02. 애자일(Agile) 개발 방법론
 
 - 애자일(Agile) 개발 방법론
   - 특정 방법론이 아닌 SW를 빠르고 낭비없이 제작키 위해 고객과에 협업에 초점, 설계 변경에 신속히 대응해 요구사항을 수용가능
@@ -160,7 +165,7 @@
 - Agile 선언문
   - 프로세스나 도구보다 개인과의 소통이 중요 / 완벽한 문서보다 실행되는 SW가 중요 / 계약 협상보다 고객과의 협업이 중요 / 계획 이행보다 변경에 대한 응답이 중요
 
----
+#### 03. XP(eXtreme Programming)
 
 - XP(eXtreme Programming)
 
@@ -216,6 +221,8 @@
 
 ### 4. SCRUM
 
+#### 01. SCRUM
+
 - SCRUM 개념과 특징
   - 요구사항 변경에 신속하게 대처할 수 있도록 반복적이고 점진적인 소규모 팀원 간 활발한 소통과 협동심이 필요한 팀 중심의 SW 개발 방법론
   - 신속하게 반복적으로 실제 작동하는 SW 제공
@@ -244,21 +251,21 @@
     | 스크럼 마스터               | 업무 배분만 하고 일은 강요 X / 팀 스스로 조직하고 관리하도록 지원 / 개발 장애 요소 제거 / 스크럼 원칙 가치 지원 |
     | 스크럼 팀                   | 제품 책임자, 스크럼 마스터를 제외한 팀원이 해당, 팀원은 5~9명 / 기능을 작업단위로 분류, 스토리로 도출 구현 / 일정을 추정해 책임자에게 전달 / 결과물을 책임자에게 시연 / 매일 스크럼 회의 |
 
+#### 02. SCRUM 과정
 
----
-
-- SCRUM 과정
-  - Product Backlog : 제품 개발에 필요한 모든 요구사항(User Story)을 우선순위에 따라 나열한 목록 / 지속적 업데이트 / 릴리즈 계획 수립
-  - Sprint : 작은 단위의 개발 업무를 단기간에 전력 질주하여 개발 / 반복 주기마다 진척도 보고
-  - Spring Planning Meeting : Product Backlog 에서 진행할 목록을 선택 / 단기 일정 수립, 요구사항을 Task 단위로 나눔 / Sprint Backlog 작성, 결과물 모습 결정 / SCRUM Master 에게 보고해 이해관계자로부터 수행에 필요한 요구사항 지원
-  - Daily SCRUM Meeting : 매일 약속된 시간에 짧게 서서 진행 점검 / 완료된 작업항목을 스프린트 현황판에 갱신 / 스크럼 마스터는 방해요소를 찾아 제거 후 작업 시간을 **소멸차트(Burn down Chart)**에 기록
-  - Finished Work : 모든 스프린트 주기 완료 시 제품 기능 목록(Product Backlog)의 개발 목표물 완성
-  - Sprint Review : 개발자와 사용자 같이 참석 / 반복주기 종료 시 생성된 제품에 대해 검토 / 개선 사항에 대해 제품 책임자는 피드백을 정리 후 백로그 작성
-  - Sprint Retrospective : 개선점이 없는지 살펴보고 문제점 기록 정도로 진행 / 강점을 찾아 팀 능력 극대화 / 추정속도와 개발속도 비교해 차이 원인 분석
+- Product Backlog : 제품 개발에 필요한 모든 요구사항(User Story)을 우선순위에 따라 나열한 목록 / 지속적 업데이트 / 릴리즈 계획 수립
+- Sprint : 작은 단위의 개발 업무를 단기간에 전력 질주하여 개발 / 반복 주기마다 진척도 보고
+- Spring Planning Meeting : Product Backlog 에서 진행할 목록을 선택 / 단기 일정 수립, 요구사항을 Task 단위로 나눔 / Sprint Backlog 작성, 결과물 모습 결정 / SCRUM Master 에게 보고해 이해관계자로부터 수행에 필요한 요구사항 지원
+- Daily SCRUM Meeting : 매일 약속된 시간에 짧게 서서 진행 점검 / 완료된 작업항목을 스프린트 현황판에 갱신 / 스크럼 마스터는 방해요소를 찾아 제거 후 작업 시간을 **소멸차트(Burn down Chart)**에 기록
+- Finished Work : 모든 스프린트 주기 완료 시 제품 기능 목록(Product Backlog)의 개발 목표물 완성
+- Sprint Review : 개발자와 사용자 같이 참석 / 반복주기 종료 시 생성된 제품에 대해 검토 / 개선 사항에 대해 제품 책임자는 피드백을 정리 후 백로그 작성
+- Sprint Retrospective : 개선점이 없는지 살펴보고 문제점 기록 정도로 진행 / 강점을 찾아 팀 능력 극대화 / 추정속도와 개발속도 비교해 차이 원인 분석
 
 ---
 
 ### 5. 현행 시스템 분석
+
+#### 01. 현행 시스템 분석
 
 - 현행 시스템 분석의 정의와 목적
   - 현행 시스템이 어떤 하위 시스템으로 구성되어 있는지 파악하는 절차
@@ -278,8 +285,7 @@
   - 시스템의 목적 달성을 위해 각 컴포넌트를 식별하고 컴포넌트의 상호작용을 통해 어떻게 정보 교환이 발생하는지 설명
   - 시스템 아키텍처 <-> SW 아키텍처 -> SW 상세설계
 
-
----
+#### 02. 시스템 및 인터페이스 현황 파악
 
 - 시스템 구성 파악
 
@@ -331,8 +337,7 @@
   - 입력 데이터를 프로세서가 처리하기 전에 미리 처리해 처리시간을 줄여주는 프로그램이나 HW
   - 여러 통신 라인을 중앙 컴퓨터에 연결하고 터미널의 메시지가 보낼 상태로 있는지 받을 상태로 있는지 검색, 통신라인의 에러 검출
 
-
----
+#### 03. 소프트웨어, 하드웨어, 네트워크 현황파악
 
 - 소프트웨어 구성 파악
   - 시스템 내의 단위 업무 시스템의 업무 처리용 SW의 품명, 용도, 라이선스 적용 방식, 라이선스 수를 명시
@@ -355,8 +360,7 @@
 - 개발 기술 환경 분석
   - 개발 대상 시스템의 플랫폼, OS, DBMS, Middle Ware 등을 분석
 
-
----
+#### 04. 플랫폼(Platform) 파악
 
 - 플랫폼
   - 응용 SW + (HW + 시스템 SW)
@@ -373,8 +377,7 @@
   - **사용자 인터뷰 : 사용자를 대상으로 현행 플랫폼 기능의 불편함을 인터뷰**
   - **문서 점검 : 플랫폼과 유사한 플랫폼의 기능 자료를 분석**
 
-
----
+#### 05. 현행 시스템의 OS 분석
 
 - OS(Operating System, 운영체제) 정의 및 기능
   - HW, SW 자원 관리 및 공통 서비스 제공, 사용자와의 인터페이스를 제공
@@ -397,7 +400,7 @@
 
 [^4]: 다수의 저렴한 컴퓨터를 하나처럼 묶어 대량 데이터(Big Data)를 처리하는 기술
 
----
+#### 06. 현행 시스템 DBMS 분석
 
 - DBMS(DataBase Management System)
 
@@ -426,6 +429,8 @@
 ---
 
 ### 6. 요구사항 개발
+
+#### 01. 요구사항 개발
 
 - 요구공학(Requirements Engineering)
   - SW 개발 시 사용자 요구가 정확히 반영된 시스템 개발을 위해 요구를 추출, 분석, 명세, 검증, 관리하는 구조화된 활동 집합
@@ -546,7 +551,7 @@
   - 명확하게 표현해 오해를 최소화
   - 요구사항 분석의 마지막 단계에서 이루어짐
 
----
+#### 02. 요구사항 확인 기법
 
 - 요구사항 확인 기법의 종류
 
@@ -582,6 +587,8 @@
 
 ### 7. UML
 
+#### 01. 개념 모델링(Conceptual Modeling)
+
 - 개념 모델링
   - 요구사항을 이해하기 쉽도록 실 세계의 상황을 단순화해 개념적으로 표현한 것이 모델, 표현된 모델을 생성해 나가는 과정을 개념 모델링이라고 함
   - 모델은 문제가 발생하는 상황에 대한 이해를 증진하고 해결책을 설명하므로 SW 요구사항 분석의 핵심이라 할 수 있다.
@@ -590,9 +597,9 @@
   - 대부분 UML(Unified Modeling Language)을 사용
   - 종류 : Use Case Diagram, Data Flow Model, State Model, Goal-Based Model, User Interactions, Object Model, Data Model
 
----
+#### 02. UML (Unified Modeling Lanugage)
 
-- UML (Unified Modeling Lanugage)
+- UML
 
   - 객체지향 SW 개발 과정에서 시스템 분석, 설계, 구현 등의 산출물을 명세, 시각, 문서화 할 때 사용하는 모델링 기술과 방법론을 통합하여 만든 모델링 언어
   - Rumbaugh의 OMT 방법론과 Booch의 Booch 방법론, Jacobson의 OOSE 방법론을 통합하여 만든 모델링 개념의 공통 집합으로 객체지향 분석 및 설계 방법론의 표준 지정을 목표로 제안된 모델링 언어
@@ -653,7 +660,7 @@
     | n           | n개 객체 연결               |
     | n..*        | n이거나 n개 이상 객체 연결  |
 
----
+#### 03. UML 다이어그램의 분류
 
 - 구조적 다이어그램(Structured Diagram)
 
@@ -685,7 +692,7 @@
     |                       | Communication Diagram        | 객체 사이의 관계를 중심으로 상호작용 표현                    |
     |                       | Timing Diagram               | 객체 상태 변화와 시간 제약을 명시적으로 표현                 |
 
----
+#### 04. 클래스 다이어그램 관계 표현
 
 - Class Diagram
 
@@ -744,7 +751,7 @@
   - 한 객체가 다른 객체에게 오퍼레이션을 수행하도록 지정하는 의미적 관계
   - ![image](https://user-images.githubusercontent.com/107028310/210359560-251de9af-ef33-4590-9461-9dd1513b5567.png)
 
----
+#### 05. Use Case Diagram
 
 - Use Case Diagram의 개념
 
@@ -775,6 +782,8 @@
 
 ### 8. UI 환경 분석
 
+#### 01. 소프트웨어 아키텍처
+
 - 소프트웨어 아키텍처(Software Architecture)
   - 개발 대상 시스템의 전반적인 구조를 체계적으로 설계
   - 다수의 이해관계자가 참여하는 복잡한 개발에서 상호이해, 타협, 의사소통을 체계적으로 접근하기 위함
@@ -794,7 +803,7 @@
   - 기존 : 기능성, 신뢰성, 사용성, 효율성, 유지보수성, 이식성
   - 변경 : 기능 적합성, 실행 효율성, 호환성, 사용성, 신뢰성, 보안성, 유지보수성, 이식성, 부특성 일부 가 증가
 
----
+#### 02. UI 표준을 위한 환경 분석
 
 - 사용자 경향 분석
 
@@ -839,6 +848,8 @@
 
 ### 9. UI 표준 및 지침
 
+#### 01. UI 표준 및 지침
+
 - UI(User Interface)
   - 인간, 디지털 기기, SW 사이에서 의사소통 할 수 있도록 만들어진 매개체
   - 인간과 컴퓨터의 상호작용(HCI)에 필요한 화상, 문자, 소리, 수단(장치)을 의미
@@ -858,7 +869,7 @@
 
 [^6]: 프롬프트(입력창) : 사용자의 명령을 받아들일 준비가 되었음을 모니터에 나타내는 표시(커서)
 
----
+#### 02. UI  설계
 
 - UI 설계 원칙
 
@@ -888,7 +899,7 @@
     | 명확성         | 사용자 관점에서 개념적으로 쉽게 인지할 수 있어야 함          |
     | 오류 발생 해결 | 오류 발생 시 사용자가 상황을 정확히 인지 가능해야 함         |
 
----
+#### 03. UI 표준
 
 - UI 구현 표준
   - 전체 시스템 개발 중 개발자간 협업을 통해 각기 개발한 화면간에 갖추어야 할 최소한의 UI 요소 및 배치 규칙 등 의미
@@ -903,7 +914,7 @@
   - 이해의 용이성 : 가독성, 예측 가능성, 콘텐츠의 논리성, 입력 도움
   - 견고성 : 문법 준수, 웹 애플리케이션 접근성
 
----
+#### 04. UX(User eXperience)
 
 - UX 사용자 경험
   - 제품을 대상으로 직간접적으로 사용하며 느끼고 생각하게 되는 지각과 반응, 행동 등 모든 경험
@@ -919,6 +930,8 @@
 ---
 
 ### 10. UI 설계
+
+#### 01. UI 설계 단계
 
 - UI 설계 단계
   - 문제 정의 : 시스템의 목적과 해결해야 할 문제를 정의
@@ -965,7 +978,7 @@
 
   - GUI(Graphical User Interface), OUI(Organic User Interface), NUI(Natural User Interface), CLI(Command Line Interface)
 
----
+#### 02. UI 설계 도구
 
 - UI 설계에 도움을 주는 도구들
   - 와이어 프레임(Wire Frame) : UI 중심의 화면 레이아웃을 선으로 개략적으로 작성
@@ -987,7 +1000,7 @@
   - 작성 방법 : 상단/우측 > 제목, 작성자 기재, 좌측 > UI화면, 우측 > Description
   - 작성 단계 : 메뉴 구성도 만들기 > 스타일 확정 > 설계
 
----
+#### 03. UI 프로토타입
 
 - UI Prototype
 
@@ -1024,7 +1037,7 @@
 
   - 사용자 요구분석 > 프로토타입 작성 > 프로토타입 사용자 테스트 > 수정과 합의 단계
 
----
+#### 04. 감성공학
 
 - 감성공학
   - 인간의 소망으로 이미지나 감성을 구체적 제품 설계를 통해 실현해 내는 공학적 접근 방법으로 인간과 컴퓨터간에 상호작용, 즉 HCI 설계에 인간의 특성, 감성 등의 정량적 츠겆ㅇ과 평가를 통해 제품 환경 설계에 반영하는 기술
