--- a/CS/정보처리기사/소프트웨어 설계 2.md
+++ b/CS/정보처리기사/소프트웨어 설계 2.md
@@ -215,6 +215,132 @@
 
 ---
 
+### 12. 모듈
+
+#### 01. 모듈과 결합도, 응집도
+
+- 모듈
+
+  - 전체 프로그램에서 기능을 수행할 수 있는 실행 코드를 의미하며 재사용 가능, 자체적 컴파일이 가능
+  - 시스템 개발 시 기간과 노동력 절감이 가능하며 모듈의 독립성은 결합도와 응집도에 의해 측정됨
+  - 서브루틴 = 서브 시스템 = 작업 단위
+  - 변수의 선언을 효율적으로 할 수 있어 기억 장치를 유용하게 사용 가능
+  - 모듈마다 사용할 변수를 정의하지 않고 상속해 사용 가능
+  - 각 묘듈의 기능이 서로 다른 모듈과 과도한 상호작ㄱ용을 회피함으로서 이루어지는 것을 기능적 독립성이라 부름
+
+- 결합도(Coupling)
+
+  - 서로 다른 두 모듈 간의 상호 의존도로서 두 묘둘간의 기능적 연관 정도를 나타냄
+
+  - 모듈 간의 결합도를 약하게 하면 모듈 독립성이 향상되어 시스템 구현과 유지보수가 쉬워짐
+
+  - 자료 결합도가 설계 품질이 가장 좋다
+
+  - | 결합도      | 종류          | 설명                                                         |
+    | ----------- | ------------- | ------------------------------------------------------------ |
+    | 결합도 약함 | 자료 결합도   | 모듈 간의 인터페이스가 자료 요소로만 구성된 경우로 다른 모듈에 영향 주지 않는 가장 바람직한 결합도<br />모듈간의 내용을 전혀 알 필요가 없다 |
+    | ↑           | 스탬프 결합도 | 두 모듈이 같은 자료 구조를 조회하는 경우의 결합도<br />자료구조의 변화 즉 포맷이나 구조의 변화는 조회하는 모든 모듈 및 변화되는 필드를 실제로 조회하지 않는 모듈까지도 영향을 미침<br />배열, 레코드, 구조 등이 모듈 간 인터페이스로 전달되는 경우와 관계 |
+    | ↑           | 제어 결합도   | 어떤 모듈이 타 모듈의 내부 논리 조작을 제어하기 위해 제어 신호를 이용해 통신하는 경우<br />하위 모듈에서 상위 모듈로 제어 신호가 이동해 상위 모듈에 처리 명령을 부여하는 권리 전도 현상 발생 |
+    | ↓           | 외부 결합도   | 어떤 모듈에서 외부로 선언한 변수를 다른 모듈에서 참조할 경우 관계 |
+    | ↓           | 공통 결합도   | 여러 모듈이 공통 자료 영역을 사용하는 경우<br />공통 데이터 영역 내용을 수정하면 이 데이터를 사용하는 모든 모듈에 영향 |
+    | 결합도 강함 | 내용 결합     | 한 모듈이 다른 모듈의 내부 기능 및 그 내부 자료를 조회하도록 설계 되었을 경우 관계<br />한 모듈에서 다른 모듈의 내부로 제어 및 이동되며 내부 자료 조회, 변경, 같은 문자의 공유가 가능 |
+
+- 응집도(Cohesion)
+
+  - Myers가 구분한 명령어, 명령어의 모임, 호출문, 특정 작업 수행 코드 등 모듈안의 요소들이 서로 관련된 정도
+
+  - 구조적 설계에서 기능 수행 시 모듈 간 최소한의 상호작용을 해 하나의 기능만을 수행하는 정도 푷녀
+
+  - 모듈이 독립적 기능으로 구성됨의 정도
+
+  - 응집도가 높다는 건 구성됨의 정도를 의미
+
+  - 응집도가 낮다는 것은 요소간의 관련성이 적음을 의미
+
+  - | 응집도      | 종류          | 설명                                                         |
+    | ----------- | ------------- | ------------------------------------------------------------ |
+    | 응집도 강함 | 기능적 응집도 | 모듈 내부의 모든 기능 요소들이 한 문제와 연관되어 수행되는 경우와 관계 |
+    | ↑           | 순차적 응집도 | 한 모듈 내부의 한 기능 요소에 의한 출력 자료가 다음 기능 요소의 입력 자료로 제공되는 경우와 관계 |
+    | ↑           | 교환적 응집도 | 같은 입출력을 사용하는 소 작업이 모인 경우와 관계            |
+    | ↕           | 절차적 응집도 | 모듈이 다수의 관련 기능을 가질 때 모듈 내부의 기능 요소들이 그 기능을 순차적 수행 할 경우와 관계 |
+    | ↓           | 시간적 응집도 | 특정 시간에 처리되는 여러 기능을 모아 한 개의 모듈로 작성할 경우와 관계 |
+    | ↓           | 논리적 응집도 | 유사한 성격을 갖거나 특정 형태로 분류되는 처리 요소들과 하나의 모듈이 형성되는 경우와 관계 |
+    | 응집도 약함 | 우연적 응집도 | 모듈 내부의 각 기능 요소들이 서로 관련이 없는 요소로만 구성된 경우와 관계 |
+
+- 효과적인 모듈화 설계 방법
+
+  - 응집도는 강하게, 결합도는 약하게 설계해 모듈의 독립성을 보장하고, 유지보수가 용이토록 설계
+  - 출입구를 하나씩 갖게 하고 모듈간 접속 관계를 분석해 복잡도와 중복성을 줄이고 일관성을 유지할 수 있도록 설계
+  - 모듈 크기는 전반적 기능과 구조를 이해하기 쉬운 크기로 설계
+  - 모듈 기능은 예측이 가능해야 하며 지나치게 제한적이어서는 안됨
+  - 모듈 간 효과적 제어를 위해 설계에서 계층적 자료 조직이 제시되어야 하며 적당한 모듈 크기를 유지
+
+- 모듈 설계의 특징
+
+  - 모듈 독립성이 높다는 것은 단위 모듈을 변경하더라도 타 모듈에 영향이 적다는 의미로 오류 발견과 해결이 쉬워짐
+  - 모듈 인터페이스 설계 시 인덱스 번호, 기능 코드 등 전반적인 논리 구조에 영향을 끼치지 않도록 함
+
+#### 02. 모듈과 컴포넌트
+
+- 모듈 vs 컴포넌트
+
+  - | 모듈                                                         | 컴포넌트                                                     |
+    | ------------------------------------------------------------ | ------------------------------------------------------------ |
+    | 자신만으로 동작 가능한 명령의 집합<br />실제로 가장 맨 앞에 위치하는 구현된 단위이며 자료 구조, 알고리즘 등 이 제공하는 인터페이스<br />정의하지 않는 이상 바로 재활용 불가능 | SW 시스템에서 독립적 업무 및 기능을 수행하는 모듈로 교체가 가능한 부품<br />모듈화로 생산성을 향상했으나 모듈의 소스 코드 레벨의 재활용으로 인한 한계성 극복을 위해 등장<br />인터페이스를 통해 연결 |
+    | 1개 서버에 100개의 클라이언트가 서비스 받고 있을 때,<br />서버 1 + 서비스 구현된 모듈 1개로 총 모듈은 2개 | 1개 서버에 100개의 클라이언트가 서비스 받고 있을 때,<br />실제 동작 서버 1 + 클라이언트 100개로 총 101 |
+
+- 모듈, 컴포넌트, 서비스 특징 비교
+
+  - | 구분        | 모듈                                                 | 컴포넌트                                              |
+    | ----------- | ---------------------------------------------------- | ----------------------------------------------------- |
+    | 주요 목적   | SW 복잡도 해소                                       | SW 재사용성 향상                                      |
+    | 재사용 단위 | 소스 코드                                            | 실행 코드                                             |
+    | 독립성      | 구현 언어 종속적, 플랫폼에 종속적                    | 구현 언어 종속적, 동일 플랫폼 기반 개별적 연계        |
+    | 응용        | 단일 애플리케이션                                    | 분산 애플리케이션                                     |
+    | 중심사상    | 모듈화, 추상화                                       | 객체지향, CBD                                         |
+    | 호출 방법   | 함수 호출                                            | 구현 기술 인터페이스                                  |
+    | 서비스 특징 | 여러 모듈이 하나의 애플리케이션을 형성하는 계층 구조 | 다른 컴포넌트와 커뮤니케이션 네트워크를 이루며 서비스 |
+
+- 모듈 분할의 특징
+
+  - 설계의 질이 측정 가능하며 유지보수, 재사용이 쉬움
+  - 모듈 분할 시 영향을 주는 설계 형태 : 추상화, 모듈화, 정보 은폐, 복잡도, 시스템 구조
+
+#### 03. 재사용과 공통 모듈
+
+- 재사용
+  - 검증된 기능을 파악해 재구성하는 것을 의미하며 새로운 개발 방법론 도입이 어려움
+  - 모듈 최적화를 통해 타 시스템에 적용하면 개발 비용 및 기간 단축 가능
+  - 생산성 및 SW 품질 향상
+  - 재사용 시 해당 모듈은 외부 모듈과의 응집도는 높고, 결합도는 낮아야 함
+  - 기존 SW에 재사용 SW를 추가하기 어려운 문제점이 발생 가능
+- 재사용 규모에 따른 구분
+  - 함수와 객체 : 클래스, 메소드 단위로 소스 코드 등을 재사용
+  - 애플리케이션 : 공통 업무를 처리할 수 있도록 구현된 애플리케이션을 공유해 재사용
+  - 컴포넌트 : 컴포넌트 자체 수정 없이 인터페이스를 통해 컴포넌트 단위로 재사용
+- 공통 모듈
+  - 각 서브 시스템에서 공통 사용하는 기능(날짜 처리 등)을 묶어 하나의 공통 모듈로 개발
+  - 모듈 재사용성을 높이고 중복 개발로 인한 낭비를 없애기 위해 설계 단계에서 공통 모듈을 분리
+  - 같은 기능 재사용함으로 기능에 대한 정합성 유지 및 중복 개발 방지
+  - 유지보수 단계에서도 모듈 변경을 통해 관련된 시스템 일괄 변경 가능
+  - 재사용 범위에 따른 분류 : 함수와 객체 재사용, 컴포넌트 재사용 , 애플리케이션 재사용
+- 공통 모듈 - 명세 기법
+  -  정확성 : 실제 구현 시 꼭 필요한 기능인지 확인 가능토록 정확히 작성
+  - 명확성 : 해당 기능에 대한 일관된 이해와 하나로 해석 가능토록 작성
+  - 완전성 : 시스템 구현 시 필요한 것, 요구되는 것을 모두 작성
+  - 일관성 : 공통 기능 간 서로 충돌이 발생하지 않도록 작성
+  - 추적성 : 공통 기능에 대한 요구사항 출처, 관련 시스템이 유기적 관계 구분이 가능토록 작성
+- 모듈 명세화 도구
+  - 흐름도(Flowchart), N-S도표(Nassi-SchneidermanChart), 의사 코드(Pseudo Code), 의사 결정표(Decision Table), 의사 결정도(Decision Diagram), 상태 전이도(State Design Language), PDL(Program Design Language), 행위도(Action Diagram)
+- N-S 도표(Nassi-Schneiderman Chart)
+  - 구조적 프로그램의 순차, 선택, 반복의 구조를사각형으로 도식화 해 알고리즘을 논리적 기술에 중점을 둔 도형식 표현 방법
+  - 이해하기 쉽고 코드 변환이 용이하며 조건이 복합되어 있는 곳의 처리를 시각적으로 명확히 식별하는데 적합
+  - 제어구조 : 순차(연속, Sequence), 선택 및 다중 선택(If~Then~Else,Case), 반복(Repeat~Until, While, For)
+  - 주로 박스 다이어그램을 사용해 논리적 제어 구조로 흐름을 표현
+  - ![image](https://user-images.githubusercontent.com/107028310/211023365-d16d8c78-d6a9-44f6-a94f-0255c759615c.png)
+
+---
+
 
 
 
