--- a/CS/정보처리기사/소프트웨어 설계 2.md
+++ b/CS/정보처리기사/소프트웨어 설계 2.md
@@ -262,7 +262,7 @@
     | 응집도 강함 | 기능적 응집도 | 모듈 내부의 모든 기능 요소들이 한 문제와 연관되어 수행되는 경우와 관계 |
     | ↑           | 순차적 응집도 | 한 모듈 내부의 한 기능 요소에 의한 출력 자료가 다음 기능 요소의 입력 자료로 제공되는 경우와 관계 |
     | ↑           | 교환적 응집도 | 같은 입출력을 사용하는 소 작업이 모인 경우와 관계            |
-    | ↕           | 절차적 응집도 | 모듈이 다수의 관련 기능을 가질 때 모듈 내부의 기능 요소들이 그 기능을 순차적 수행 할 경우와 관계 |
+    |             | 절차적 응집도 | 모듈이 다수의 관련 기능을 가질 때 모듈 내부의 기능 요소들이 그 기능을 순차적 수행 할 경우와 관계 |
     | ↓           | 시간적 응집도 | 특정 시간에 처리되는 여러 기능을 모아 한 개의 모듈로 작성할 경우와 관계 |
     | ↓           | 논리적 응집도 | 유사한 성격을 갖거나 특정 형태로 분류되는 처리 요소들과 하나의 모듈이 형성되는 경우와 관계 |
     | 응집도 약함 | 우연적 응집도 | 모듈 내부의 각 기능 요소들이 서로 관련이 없는 요소로만 구성된 경우와 관계 |
