--- a/CS/정보처리기사/소프트웨어 설계 2.md
+++ b/CS/정보처리기사/소프트웨어 설계 2.md
@@ -257,15 +257,15 @@
 
   - 응집도가 낮다는 것은 요소간의 관련성이 적음을 의미
 
-  - | 응집도      | 종류          | 설명                                                         |
-    | ----------- | ------------- | ------------------------------------------------------------ |
-    | 응집도 강함 | 기능적 응집도 | 모듈 내부의 모든 기능 요소들이 한 문제와 연관되어 수행되는 경우와 관계 |
-    | ↑           | 순차적 응집도 | 한 모듈 내부의 한 기능 요소에 의한 출력 자료가 다음 기능 요소의 입력 자료로 제공되는 경우와 관계 |
-    | ↑           | 교환적 응집도 | 같은 입출력을 사용하는 소 작업이 모인 경우와 관계            |
-    |             | 절차적 응집도 | 모듈이 다수의 관련 기능을 가질 때 모듈 내부의 기능 요소들이 그 기능을 순차적 수행 할 경우와 관계 |
-    | ↓           | 시간적 응집도 | 특정 시간에 처리되는 여러 기능을 모아 한 개의 모듈로 작성할 경우와 관계 |
-    | ↓           | 논리적 응집도 | 유사한 성격을 갖거나 특정 형태로 분류되는 처리 요소들과 하나의 모듈이 형성되는 경우와 관계 |
-    | 응집도 약함 | 우연적 응집도 | 모듈 내부의 각 기능 요소들이 서로 관련이 없는 요소로만 구성된 경우와 관계 |
+  - | 응집도                                                       | 종류          | 설명                                                         |
+    | ------------------------------------------------------------ | ------------- | ------------------------------------------------------------ |
+    | 응집도 강함                                                  | 기능적 응집도 | 모듈 내부의 모든 기능 요소들이 한 문제와 연관되어 수행되는 경우와 관계 |
+    | ↑                                                            | 순차적 응집도 | 한 모듈 내부의 한 기능 요소에 의한 출력 자료가 다음 기능 요소의 입력 자료로 제공되는 경우와 관계 |
+    | ↑                                                            | 교환적 응집도 | 같은 입출력을 사용하는 소 작업이 모인 경우와 관계            |
+    | 13. Software Architecture                                    | 절차적 응집도 | 모듈이 다수의 관련 기능을 가질 때 모듈 내부의 기능 요소들이 그 기능을 순차적 수행 할 경우와 관계 |
+    | 01. 소프트웨어 아키텍처↓                                     | 시간적 응집도 | 특정 시간에 처리되는 여러 기능을 모아 한 개의 모듈로 작성할 경우와 관계 |
+    | 소프트웨어 아키텍처의 개요 소프트웨어 아키텍처 시스템 품질 속성 7 소프트웨어 아키텍처 특징 소프트웨어 아키텍처 평가 기준 아키텍처 프레임워크 구성 요소 소프트웨어 아키텍처 4+1 View Model 소프트웨어 아키텍처 설계 원리 소프트웨어 아키텍처 설계 과정 소프트웨어 아키텍처 평가 방법론의 종류↓ | 논리적 응집도 | 유사한 성격을 갖거나 특정 형태로 분류되는 처리 요소들과 하나의 모듈이 형성되는 경우와 관계 |
+    | 응집도 약함                                                  | 우연적 응집도 | 모듈 내부의 각 기능 요소들이 서로 관련이 없는 요소로만 구성된 경우와 관계 |
 
 - 효과적인 모듈화 설계 방법
 
@@ -338,6 +338,151 @@
   - 제어구조 : 순차(연속, Sequence), 선택 및 다중 선택(If~Then~Else,Case), 반복(Repeat~Until, While, For)
   - 주로 박스 다이어그램을 사용해 논리적 제어 구조로 흐름을 표현
   - ![image](https://user-images.githubusercontent.com/107028310/211023365-d16d8c78-d6a9-44f6-a94f-0255c759615c.png)
+
+---
+
+### 13. Software Architecture
+
+#### 01. 소프트웨어 아키텍처
+
+- 소프트웨어 아키텍처의 개요
+
+  - 요구사항을 기반으로 개발 대상 SW의 기본을 만드는 것
+  - 다수의 이해관계자가 참여하는 복잡한 개발에서 상호 이해, 타협, 의사소통을 체계적으로 접근키 위함
+  - 전체 시스템의 전반적 구조를 체계적으로 설계하는 것
+  - 권형도(2004) : "SW를 구성하는 컴포넌트들의 상호작용 및 관계, 특성을 기반으로 컴포넌트들이 상호 유기적으로 결합하는 SW의 여러 원칙들의 집합"
+  - 역할 : 설계 및 구현을 위한 구조적/비구조적 프레임을 제공
+  - Structure Frame : 시스템 개발을 위해 결정된 컴포넌트의 구조 모델
+  - Non Structure Frame : 해당 구조 모델 이외 다른 아키텍처 설계의 결정들
+
+- 소프트웨어 아키텍처 시스템 품질 속성 7
+
+  - 성능, 사용 운용성, 보안성, 시험 용이성, 가용성, 변경 용이성, 사용성
+
+- 소프트웨어 아키텍처 특징
+
+  - 간략성 : 이해하고 추론할 수 있을 정도로 간결해야 함
+  - 추상화 : 시스템이 추상적인 표현을 사용
+  - 가시성 : 시스템이 포함해야 하는 것들을 가시화해야 한다.
+  - 복잡도 관리 종류 : 과정 추상화, 데이터 추상화, 제어 추상화
+
+- 소프트웨어 아키텍처 평가 기준
+
+  - 시스템은 어떻게 모듈로 구성되는지?
+  - 시스템은 실행 시에 어떻게 행동하고 연결되는지?
+  - 시스템은 어떻게 비 소프트웨어 구조(CPU, 파일 시스템, 네트워크, 개발팀 등)와 관계하고 있는지?
+
+- 아키텍처 프레임워크 구성 요소
+
+  - 프레임워크(Framework) : 복잡한 SW 문제를 해결하거나 서술하는데 필요한 기본 구조를 제공함으로써 재사용이 가능하게 해준다.
+
+  - | 요소                         | 설명                                                         |
+    | ---------------------------- | ------------------------------------------------------------ |
+    | Architecture Description(AD) | 아키텍처를 기록하기 위한 산출물로 하나의 AD는 하나 이상의 View로 구성 |
+    | 이해관계자(Stakeholder)      | SW 시스템 개발에 관련된 모든 사람과 조직을 의미하며, 고객, 개발자, 프로젝트 관리자 등을 포함 |
+    | 관심사(Concerns)             | 같은 시스템에 대해 서로 다른 이해관계자의 의견               |
+    | 관점(Viewpoint)              | 서로 다른 역할이나 책임으로 시스템이나 산출물에 대한 서로 다른 관점 |
+    | 뷰(View)                     | 이해관계자들과 이들이 가지는 생각이나 견해로부터 전체 시스템을 표현 |
+
+- 소프트웨어 아키텍처 4+1 View Model
+
+  - Kruchten에 의해 Object 표기법을 사용하다가 1995년 Booch의 UML이 정의되며 Boock 표기법을 포함해 4+1이 되었음
+  - 다양하고 동시적인 View를 기반으로 SW 위주 시스템의 아키텍처를 묘사하는 View 모델
+  - 복잡한 SW 아키텍처를 다양한 측면을 고려하기 위해 다양한 관점을 바탕으로 정의한 모델
+  - 분석 및 설계, 프로그래머, 시스템 통합자, 시스템 엔지니어, 사용자의 5계층으로 분류한 모델
+
+- 소프트웨어 아키텍처 설계 원리
+
+  - | 구분         | 설명                                                |
+    | ------------ | --------------------------------------------------- |
+    | 단순성       | 다양한 요소를 단순화하여 복잡성을 최소화            |
+    | 효율성       | 활용 자원의 적절성과 효율을 높임                    |
+    | 분할, 계층화 | 다루기 쉬운 단위로 묶어서 계층화                    |
+    | 추상화       | 부가적 기능이 아닌 핵심 기능 위주로 컴포넌트를 정의 |
+    | 모듈화       | 내부 요소의 응집도를 높이고 모듈 외부 결합도를 낮춤 |
+
+- 소프트웨어 아키텍처 설계 과정
+
+  - 설계 목표 설정 → 시스템 타입 결정 → 스타일 적용 및 커스터마이즈 → 서브 시스템의 기능, 인터페이스 동작 작성 → 아키텍처 설계 검토
+
+- 소프트웨어 아키텍처 평가 방법론의 종류
+
+  - | 방법                                                         | 설명                                                         |
+    | ------------------------------------------------------------ | ------------------------------------------------------------ |
+    | SAAM<br />(Software Architecture Analysis Method)            | 다양한 수정 가능성 관점에서 아키텍처를 평가하고 분석하는 방법<br />변경에 필요한 자원을 가정하고 이를 바탕으로 평가<br />ATAM에 비해 상세하지는 않지만 보다 많은 영역에 적용가능 |
+    | ATAM<br />(Architecture Trade Off Analysis Method)           | 아키텍처가 품질 속성을 만족하는지 판단, 어떻게 절충하며 상호작용하는지 분석하는 방법<br />모든 품질 속성을 평가하고 관심있는 모든 관련 당사자들 참여<br />정량적/정성적 분석 평가를 진행하며 민감점과 절충점을 찾는데 중점 |
+    | CBAM<br />(Cost Benefit Analysis Method)                     | SW 아키텍처를 ROI(Return on Investment) 관점에서 평가하며 시스템이 제공하는 품질에서 경제적 이득 측면을 고려<br />비용, 이익을 기반으로 ROI를 계산하여 수익이 최대화 되는 SW 아키텍처를 선정 |
+    | ARID<br />(Active Review for Intermediate Design, ATAM과 ADR을 혼합한 형태) | 전체 아키텍처가 아닌 한 부분에 대한 품질 요소에 집중하여 평가를 진행 |
+
+
+---
+
+### 14 . 소프트웨어 아키텍처 패턴
+
+#### 01. 소프트웨어 아키텍처 패턴
+
+- 아키텍처 패턴
+  - SW 아키텍처를 설계하는데 발생하는 문제점을 해결하기 위한 재사용 가능한 솔루션으로 디자인 패턴과 유사하나 더 큰 범위
+  - 종류 : Layered, Client-Server, Mater-Slave, Pipe-Filter, Broker, Peer to Peer, Event-Bus, MVC(ModelViewController), Blackboard, Interpreter
+  - 장점 : 개발 시간 단축, 고품질 SW, 안정적 개발 가능, 개발 단계 관계자 간 의사소통 간편, 시스템 구조 이해도가 높아 유지보수 유리
+    (아키텍처패턴=아키텍처스타일=표준아키텍처)
+
+- 계층(Layered) 패턴
+  - SW를 계층 단위(Unit)로 분할하며, N-tier 아키텍처 패턴이라고도 함
+  - 계층적으로 조직화할 수 있는 서비스로 구성된 애플리케이션에 적합
+  - 전통적 방법으로 층 내부의 응집도를 높이는 것이 중요
+  - 모듈들의 응집된 집합 계층 간의 관계는 사용 가능의 관계로 표현
+  - 장점 : 정보은닉의 원칙 적용, 높은 이식성
+  - 단점 : 추가 실행 시 오버헤드(너무 많은 계층으로 성능 감소)가 발생
+  - 활용 : 일반적 데스크톱 SW나 E-Commerce 웹 애플리케이션
+  - 4계층 : PresentationLayer = UI 계층(UILayer) / Application Layer=서비스 계층(ServiceLayer) / Business Logic Layer=도메인계층(DomainLayer) / Data access Layer=영속계층(PersistenceLayer)
+
+- MVC(Model View Controller) 패턴
+  - 대화형 애플리케이션을 3부분으로 분류
+  - Model(핵심 기능 + 데이터) / View(사용자에게 정보를 표시) / Controller(사용자로부터 입력을 처리)
+  - Model은 사용자가 편집하길 원하는 모든 데이터를 가지고 있어야 하며, Controller는 모델이나 뷰에 대해 알고 있어야함
+  - 장점 : 같은 모델에서 다수의 뷰를 생성 가능, 실행 시간에 동적으로 연결 및 해제 가능
+  - 단점 : 사용자 행동에 대한 불필요 업데이트가 발생 가능하며 복잡성 증가 가능
+  - 활용 : 일반적 웹 애플리케이션 설계 아키텍처, Django나 Rails와 같은 웹 프레임워크
+
+- 클라이언트 서버(Client Server) 패턴
+  - 하나의 서버가 다수 클라이언트로 구성, 클라이언트가 서버에 서비스를 요청하면 커뮤니케이션이 발생, 서버는 응답을 위해 항상 대기 중이어야 함
+  - 여러 컴포넌트에 걸쳐 데이터와 데이터를 처리하는 애플리케이션에 적합
+  - 장점 : 직접 데이터 분산, 위치 투명성 제공
+  - 단점 : 서비스와 서버의 이름을 관리하는 레지스터가 없어 이용 가능한 서비스 시간에 불편함을 초래
+  - 활용 : 이메일, 문서 공유, 은행 등 온라인 애플리케이션
+
+- 파이프 필터(Pipe-Filters)
+  - 데이터 흐름을 생성하고 처리하는 시스템을 위한 구조
+  - 필터는 파이프를 통해 받은 데이터를 변경시키고 그 결과를 파이프로 전송
+  - 각 처리 과정은 필터 컴포넌트에서 이루어지며, 처리되는 데이터는 파이프를 통해 흐름, 이 파이프는 버퍼링 또는 동기화 목적으로 사용 가능
+  - 컴파일러, 연속한 필터들은 어휘 분석, 파싱, 의미 분석 그리고 코드 생성을 수행
+  - 장점 : 필터 교환과 재조합을 통해 높은 유연성 제공
+  - 단점 : 상태정보 공유를 위해 비용 소요되며 데이터 변환에 과부화 가능
+  - 활용 : 컴파일러, 어휘 분석, 구문 분석, 의미 분석, 코드 생성
+
+- Peer to Peer
+  - 클라이언트/서버 스타일에 대칭적 특징을 추가한 형태로 분산 컴퓨팅 애플리케이션 구축시 유연성을 제공
+  - Peer가 하나의 컴포넌트로 대응되며 컴포넌트는 클라이언트, 서버 역할 모두 수행
+
+- 브로커(Broker)
+  - 컴포넌트가 컴퓨터와 사용자를 연결해 주는 역할을 하며 분산 시스템에 주로 사용
+  - 요청에 응답하는 컴포넌트들이 여러 개 존재할 때 적함
+
+- 블랙보드(Black Board)
+  - 결정적 해결 전략이 존재하지 않는 문제 해결에 적합하며 음성 인식, 신호 해석 등에 활용
+  - 블랙보드의 데이터를 컴포넌트에서 검색을 통해 찾을 수 있음
+  - 장점 : 다양한 접근법, 유지보수성, 가변성, 재사용 가능한 지식 자원
+  - 단점 : 어려운 테스팅, 완전한 해결책을 보장하지 못함
+
+- 이벤트 버스(Event-Bus)
+  - 소스 이벤트가 메시지를 발행하면 해당 채널 구독자가 메시지 수신 후 해당 이벤트를 처리하는 방식으로 주로 이벤트 처리하며 이벤트 소스, 이벤트 리스너, 채널, 이벤트 버스 등 4가지 주요 컴포넌트를 갖는다
+  - 소스는 이벤트 버스를 통해 특정 채널로 메시지를 발행하고, 리스너는 특정 채널에서 메시지를 구독, 리스너는 이전 구독 채널에 발행된 메시지에 대해 알림을 받는다
+
+- 인터프리터(Interpreter)
+  - SQL과 DB 쿼리 언어, 통신 프로토콜을 정의하기 위한 언어로 특정 언어로 작성된 프로그램을 해석하는 컴포넌트 설계 시 사용
+  - 주로 특정 언어로 작성된 문장 혹은 표현 식이라고 하는 프로그램의 각 라인을 수행하는 방법 지정, 기본 아이디어는 언어의 각 기호에 대해 클래스 생성
+
 
 ---
 
